adding the project button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
               <div class="col-md-4">
                 <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
                 <h3 class="h5">My first site</h3>
-                <p>using python</p>
+                <p><a target="_blank" class="cta-btn cta-btn--hero" href="http://peterseptember1985.pythonanywhere.com/">
+                  See the live site
+                </a></p>
+                <p><a target="_blank" class="cta-btn text-color-main" href="https://github.com/peter-september/My_first_site">
+                  Source Code
+                </a></p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
@@ -269,9 +274,13 @@
               <div class="form-group">
                 <button type="submit" class=" btn btn-primary">Send message</button>
               </div> 
-              <a href="./assets/Resume.docx" download="Resume.docx">
-                <button type="submit" class=" btn btn-primary">Download my resume</button>
-              </a>
+              <section id="contact">
+                <div class="container">
+                  <div class="contact-wrapper">
+                    <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:peter.september1985@gmail.com">Contact me</a>
+                  </div>
+                </div>
+              </section>
             </form>
           </div>
         </div>
