finished with python

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
               <div class="col-md-4">
                 <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
                 <h3 class="h5">My first site</h3>
-                <p><a target="_blank" class="cta-btn cta-btn--hero" href="http://peterseptember1985.pythonanywhere.com/">
+                <p><a target="_blank" href="http://peterseptember1985.pythonanywhere.com/">
                   See the live site
                 </a></p>
-                <p><a target="_blank" class="cta-btn text-color-main" href="https://github.com/peter-september/My_first_site">
-                  Source Code
+                <p><a target="_blank" href="https://github.com/peter-september/My_first_site">
+                  See the source code
                 </a></p>
               </div>
               <div class="col-md-4">
